# stemxtract

./: .editorconfig  flake.nix
backend/: pyproject.toml
backend/stemxtract/: __init__.py  app.py  http.py  util.py
backend/stemxtract/auth/: base.py
backend/stemxtract/auth/oauth/: __init__.py  discord.py  starlette.py  state.py  token.py
backend/stemxtract/state/: base.py  local.py
backend/stemxtract/task/: base.py  local.py
backend/stemxtract/views/: auth.py  create_job.py  get_job.py  get_results.py  job.py  task.py
frontend/: package.json
frontend/src/: main.tsx
