[project]
name = "stemxtract"
version = "0.0.0"
dependencies = [
  "aiohttp~=3.9.1",
  "aiozipstream~=0.4",
  "click~=8.1.0",
  "discord.py~=2.3.2",
  "oauthlib~=3.2.2",
  "python-dateutil~=2.8.2",
  # NOTE: full needed for itsdangerous
  "starlette[full]~=0.34.0",
  "uvicorn~=0.25.0",
]

[project.optional-dependencies]
dev = [
  "types-oauthlib",
  "types-python-dateutil",
]
